Add jitpack.yml and downgrade to Java 10